feat(Auth) Implement user registration, password hashing, login, access jwts, refressh-token, rotation / revocatoin, logout, Test invalid credentials, expired reocked tokens, and cross user acces
